force-app/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Phone extension copied from the related user record. Contact has no standard extension field, so the sync needs this one.</description>
    <inlineHelpText>Set automatically from the related user record.</inlineHelpText>
    <label>Extension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>