force-app/main/default/objects/Contact/fields/No_Longer_There__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_There__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the related Salesforce user is inactive. Carries the same meaning as Status, as a checkbox for report and list view filters.</description>
    <inlineHelpText>Set automatically from the related user record. Checked means the user is inactive.</inlineHelpText>
    <label>No Longer There</label>
    <type>Checkbox</type>
</CustomField>