force-app/main/default/objects/Contact/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user this employee contact mirrors. This is the key the sync matches on, so one user resolves to one contact without guessing from names.</description>
    <inlineHelpText>The Salesforce user this contact represents. Set automatically by the employee contact sync.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Contacts</relationshipLabel>
    <relationshipName>Employee_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>